--- a/MVCK/Views/Authors/Index.cshtml
+++ b/MVCK/Views/Authors/Index.cshtml
@@ -43,6 +43,8 @@
 
 </table>
 
+@Html.BuildNextPreviousLinks(queryOptions, "Index")
+
 @section Scripts {
     <script>
         function ViewModel(authors) {
